# lab07

./: .gitignore  CMakeLists.txt  CPackConfig.cmake  ChangeLog.md  DESCRIPTION  REPORT.md
.github/workflows/: ci.yml
cmake/Hunter/: config.cmake
demo/: main.cpp
examples/: example1.cpp  example2.cpp
include/: print.hpp
sources/: print.cpp
tests/: test_print.cpp
